<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:checked="true"
        android:icon="@drawable/ic_action_home"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_events"
        android:checked="false"
        android:icon="@drawable/ic_action_events"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notifications"
        android:checked="false"
        android:icon="@drawable/ic_action_notifications"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_maps"
        android:checked="false"
        android:icon="@drawable/ic_action_map"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about_iut"
        android:checked="false"
        android:icon="@drawable/ic_action_about_iut"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />

</menu>