<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/bootstrap_gray_dark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <ImageView
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <LinearLayout
        android:id="@+id/hello"
        android:layout_below="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/profile_displayName"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/profile_status"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/profile_totalFriends"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:text="@string/total_friends"
            android:textColor="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginBottom="20dp"
            android:id="@+id/profile_send_req_btn"
            android:text="@string/send_friend_request"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity="center"
            android:layout_width="191dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/profile_decline_req_btn"
            android:text="@string/decline_friend"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextPrimary"
            android:layout_gravity="center"
            android:layout_width="191dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>