<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/setting_lin_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_circleimageview"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/default_avatar"/>
    </LinearLayout>

    <TextView
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_below="@+id/setting_lin_layout1"
        android:text="@string/display_name"
        android:id="@+id/settings_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/settings_display_name"
        android:text="@string/hi_there_i_m_using_iut_chat_service"
        android:id="@+id/sett_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_below="@+id/sett_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/settings_image_btn"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="8dp"
            android:text="@string/change_image"
            android:textColor="@color/colorPrimary"
            android:background="@color/common_google_signin_btn_text_dark_pressed"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/settings_status_btn"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:elevation="8dp"
            android:text="@string/change_status"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed"
            android:background="@color/colorAccent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop" />
    </LinearLayout>

</RelativeLayout>